# deepnet

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-test.yml  docker-build.yml
docs/: README.md  how-we-work.md  rust-style.md  why-rust.md
docs/diagrams/components/: README.md
docs/diagrams/end-to-end/: README.md
examples/: README.md  definition.json  example.json  publish.py  subscribe.js
operator/: Cargo.toml
operator/src/: bastion_manager.rs  connection_manager.rs  external_api.rs  internal_api.rs  lib.rs  main.rs  operator_service.rs  site_service.rs  state_manager.rs  vendor_service.rs
site/: Cargo.toml
site/src/: authentication_service.rs  charging_service.rs  data_services.rs  external_api.rs  lib.rs  main.rs  network_manager.rs  state.rs  state_manager.rs
